fixed final sentence

--- a/hof.ipynb
+++ b/hof.ipynb
@@ -1771,7 +1771,7 @@
     "\n",
     "## Conclusion\n",
     "\n",
-    "Thank you for reading through our data science tutorial. This project has allowed us to gain a new appreciation for the different eras of the NBA and it has allowed us to see how certain statistics can have an influence on how a player's legacy could be regarded. We learned that the year influences how a player is regarded in the history of the NBA. We also gained lots of valuable experience with machine learning, and even though we may not have done it perfectly, we are even more interested in learning about it further in CSMC422. "
+    "Thank you for reading through our data science tutorial. This project has allowed us to gain a new appreciation for the different eras of the NBA, and it has allowed us to see how certain statistics can have an influence on how a player's legacy could be regarded. We learned that the year a player has played in can influence how a player is regarded in the history of the NBA. We also gained a lot of valuable experience with machine learning, and we are very interested in continuing our learning in CMSC422."
    ],
    "cell_type": "markdown",
    "metadata": {}
